# agentwatch

./: .gitignore  DEMO_SCRIPT.md  MINDMAP.md  README.md  VISION.md  index.html  mindmap-preview.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
assets/: README.md
scripts/: gen-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shared.rs  state.rs
src-tauri/src/claude/: events.rs  mod.rs  process.rs
src-tauri/src/codex/: events.rs  mod.rs  process.rs
src/components/: Avatar.tsx  AvatarBadge.tsx  AvatarDot.tsx  ChatInput.tsx  CodeEditorPanel.tsx  DiffPanel.tsx  EditHistoryPanel.tsx  EventItem.tsx  EventLog.tsx  SetupGuide.tsx  UsagePanel.tsx  WelcomeModal.tsx
src/components/mindmap/: ArchPanel.tsx  C4DiagramPanel.tsx  ForceCanvas.tsx  MapNodeEl.tsx  MindMapPanel.tsx  PseudoPanel.tsx  nodeLayout.ts
src/components/scene/: AgentSphere.tsx  AvatarOrb.tsx  FileExplorer2D.tsx  FileGraph.tsx  FileSchemaCard.tsx  QuadScene.tsx  RenderErrorBoundary.tsx  SceneCanvas.tsx  SceneLighting.tsx  SpreadTreeScene.tsx  TreemapScene.tsx
src/lib/: diffUtils.tsx  editHistory.ts  metaFileGen.ts  mindMapBuilder.ts  mindMapStorage.ts  quadTree.ts  sceneLayout.ts  symbolParser.ts  syntaxHighlight.ts  tauri.ts  usageCalc.ts  usageStorage.ts
src/store/: useStore.ts
src/types/: events.ts  mindMap.ts  provider.ts  usage.ts
