[package]
name = "claude-avatar"
version = "0.1.0"
description = "Claude Code Visual Avatar UI"
authors = ["dusoft"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "claude_avatar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
